; ModuleID = '/home/carl/AnghaBench/postgres/src/backend/utils/adt/extr_selfuncs.c_boolvarsel.c'
source_filename = "/home/carl/AnghaBench/postgres/src/backend/utils/adt/extr_selfuncs.c_boolvarsel.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_5__ = type { i32 }

@BooleanEqualOperator = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local double @boolvarsel(i32* %0, i32* %1, i32 %2) #0 {
  %4 = alloca i32*, align 8
  %5 = alloca i32*, align 8
  %6 = alloca i32, align 4
  %7 = alloca %struct.TYPE_5__, align 4
  %8 = alloca double, align 8
  store i32* %0, i32** %4, align 8
  store i32* %1, i32** %5, align 8
  store i32 %2, i32* %6, align 4
  %9 = load i32*, i32** %4, align 8
  %10 = load i32*, i32** %5, align 8
  %11 = load i32, i32* %6, align 4
  %12 = call i32 @examine_variable(i32* %9, i32* %10, i32 %11, %struct.TYPE_5__* %7)
  %13 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %7, i32 0, i32 0
  %14 = load i32, i32* %13, align 4
  %15 = call i64 @HeapTupleIsValid(i32 %14)
  %16 = icmp ne i64 %15, 0
  br i1 %16, label %17, label %21

17:                                               ; preds = %3
  %18 = load i32, i32* @BooleanEqualOperator, align 4
  %19 = call i32 @BoolGetDatum(i32 1)
  %20 = call double @var_eq_const(%struct.TYPE_5__* %7, i32 %18, i32 %19, i32 0, i32 1, i32 0)
  store double %20, double* %8, align 8
  br label %22

21:                                               ; preds = %3
  store double 5.000000e-01, double* %8, align 8
  br label %22

22:                                               ; preds = %21, %17
  %23 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %7, i32 0, i32 0
  %24 = load i32, i32* %23, align 4
  %25 = call i32 @ReleaseVariableStats(i32 %24)
  %26 = load double, double* %8, align 8
  ret double %26
}

declare dso_local i32 @examine_variable(i32*, i32*, i32, %struct.TYPE_5__*) #1

declare dso_local i64 @HeapTupleIsValid(i32) #1

declare dso_local double @var_eq_const(%struct.TYPE_5__*, i32, i32, i32, i32, i32) #1

declare dso_local i32 @BoolGetDatum(i32) #1

declare dso_local i32 @ReleaseVariableStats(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
